--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <div class="flame"></div>
     <div class="flame2"></div>
     <div class="flame3"></div>
-    <div class="text">Nice Senelere!</div>
+    <div class="text">Happy Birthday!</div>
     <div class="shadows"></div>
   </div>
-  <p class="text2">Dileğini dile ve mumları söndür</p>
+  <p class="text2">*click on the flame to blow candles</p>
 </div>
