--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     <div class="shadows"></div>
   </div>
   <p class="text2">*click on the flame to blow candles</p>
+  <script src="script.js"></script>
 </div>
