--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <p class="text2">*click on the flame to blow candles</p>
   </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
